[package]
name = "payment_engine"
version = "0.1.0"
edition = "2018"
authors = ["alen.raos@gmail.com"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
derive_more = {version = "0.99.16", features = ["error", "display"] }
csv = "1.1"
rust_decimal = "1.14"
log = "0.4.0"
env_logger = "0.8.4"
serde_json = "1.0.64"
lru = "0.6.5"
clap = "2.33.3"
pickledb = "0.4.1"